--- a/playaround.ipynb
+++ b/playaround.ipynb
@@ -150,14 +150,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor(0.)\n"
+      "BEFORE permuting the ground truth tokens\n",
+      "naive cross entropy tensor(0.5438) \n",
+      " left sum chamfer cross entropy tensor(0.5438) \n",
+      " right sum chamfer cross entropy tensor(0.5438) \n",
+      "\n",
+      "AFTER permuting the ground truth tokens\n",
+      "naive cross entropy tensor(1.4015) \n",
+      " left sum chamfer cross entropy tensor(0.5438) \n",
+      " right sum chamfer cross entropy tensor(0.5438) \n",
+      "\n"
      ]
     }
    ],
@@ -167,7 +176,8 @@
     "                 b: Shaped[Tensor, \"bs nt nl\"], \n",
     "                 mask_a: Shaped[Tensor, \"bs nt nl\"], \n",
     "                 mask_b: Shaped[Tensor, \"bs nt nl\"],\n",
-    "                 reduce: bool=True):\n",
+    "                 reduce: bool=True,\n",
+    "                 split=False):\n",
     "    \"\"\"\n",
     "    chamfer dist for tokens\n",
     "    loss_fn: loss function that computes distance between tokens\n",
@@ -203,21 +213,57 @@
     "    b_loss = b_loss.masked_fill(token_mask_b, value=0)\n",
     "    if reduce:\n",
     "        b_loss = b_loss.sum(-1) / (nt - token_mask_b.sum(-1))\n",
-    "        \n",
+    "    \n",
+    "    if split:\n",
+    "        return a_loss.mean(), b_loss.mean()\n",
     "    loss = a_loss + b_loss \n",
     "    if reduce:\n",
     "        return loss.mean()\n",
     "    return loss\n",
+    "\n",
+    "bs, nt, nl, vs = 2, 128, 50, 3\n",
+    "# ids = torch.randint(0, vs, size=(bs*nt*nl,))\n",
+    "# a = torch.eye(vs)[ids].reshape(bs, nt, nl, vs)\n",
+    "# b = ids.reshape(bs, nt, nl)\n",
+    "# b = b[:,torch.randperm(nt)]\n",
+    "# a = a[:, :,torch.randperm(nt)]\n",
+    "# print(b.shape)\n",
+    "# loss_func = lambda x, y: (x.argmax(1) - y) ** 2\n",
+    "# mask_a = torch.zeros_like(b).bool()\n",
+    "# mask_b = torch.zeros_like(b).bool()\n",
+    "# loss = chamferToken(loss_func, a, b, mask_a, mask_b)\n",
+    "# print(loss)\n",
+    "\n",
+    "def distChamfer(a, b):\n",
     "    \n",
-    "bs, nt, nl, vs = 2, 3, 4, 5\n",
-    "ids = torch.randint(0, vs, size=(bs*nt*nl,))\n",
-    "a = torch.eye(vs)[ids].reshape(bs, nt, nl, vs)\n",
-    "b = ids.reshape(bs, nt, nl)\n",
-    "loss_func = lambda x, y: (x.argmax(1) - y) ** 2\n",
-    "mask_a = torch.zeros_like(b).bool()\n",
-    "mask_b = torch.zeros_like(b).bool()\n",
-    "loss = chamferToken(loss_func, a, b, mask_a, mask_b)\n",
-    "print(loss)\n",
+    "    x, y = a, b\n",
+    "    bs, num_points, points_dim = x.size()\n",
+    "    xx = torch.bmm(x, x.transpose(2, 1))\n",
+    "    yy = torch.bmm(y, y.transpose(2, 1))\n",
+    "    zz = torch.bmm(x, y.transpose(2, 1))\n",
+    "    diag_ind = torch.arange(0, num_points).to(a).long()\n",
+    "    rx = xx[:, diag_ind, diag_ind].unsqueeze(1).expand_as(xx)\n",
+    "    ry = yy[:, diag_ind, diag_ind].unsqueeze(1).expand_as(yy)\n",
+    "    P = (rx.transpose(2, 1) + ry - 2 * zz)\n",
+    "    return P.min(1)[0], P.min(2)[0]\n",
+    "\n",
+    "\n",
+    "import torch.nn.functional as F\n",
+    "a = torch.randn(bs, nt, nl, vs)\n",
+    "b = torch.randint(0, vs, size=(bs, nt, nl))\n",
+    "_b = b[:, torch.randperm(nt)]\n",
+    "a_mask = torch.zeros_like(b)\n",
+    "b_mask = torch.zeros_like(b)\n",
+    "def foo(a, b):\n",
+    "    return F.cross_entropy(a, b, reduction=\"none\")\n",
+    "l, r = chamferToken(foo, a, b, a_mask, b_mask, split=True)\n",
+    "l_permed, r_permed = chamferToken(foo, a, _b, a_mask, b_mask, split=True)\n",
+    "gt = F.cross_entropy(a.permute(0, 3, 1, 2), b)\n",
+    "gt_permed = F.cross_entropy(a.permute(0, 3, 1, 2), _b)\n",
+    "print(\"BEFORE permuting the ground truth tokens\")\n",
+    "print(\"naive cross entropy\", gt, \"\\n\", \"left sum chamfer cross entropy\" ,l,  \"\\n\", \"right sum chamfer cross entropy\",r,  \"\\n\")\n",
+    "print(\"AFTER permuting the ground truth tokens\")\n",
+    "print(\"naive cross entropy\", gt_permed, \"\\n\", \"left sum chamfer cross entropy\" ,l_permed,  \"\\n\", \"right sum chamfer cross entropy\",r_permed,  \"\\n\")\n",
     "\n"
    ]
   },
